--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
       <artifactId>spring-web</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-commons</artifactId>
+    </dependency>
+
     <!-- Spring Boot WebSocket (includes spring-messaging and spring-websocket) -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -142,6 +147,20 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>33.5.0-jre</version>
+    </dependency>
+
+    <!-- Source: https://mvnrepository.com/artifact/net.sourceforge.owlapi/owlapi-api -->
+    <dependency>
+      <groupId>net.sourceforge.owlapi</groupId>
+      <artifactId>owlapi-api</artifactId>
+      <version>3.5.1</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.hermit-reasoner</groupId>
+      <artifactId>org.semanticweb.hermit</artifactId>
+      <version>1.3.8.4</version>
     </dependency>
 
     <!-- Awaitility for async testing -->
