Build EFO index

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,3 +5,5 @@ logging.level.uk.ac.ebi.biostudies=INFO
 index.base-dir=target/test-indices
 
 messaging.stomp.enabled=false
+
+efo.owl-filename=src/test/resources/efo-test-minimal.owl
