--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,9 +31,15 @@ indexer.thread-count=8
 # Maximum queued indexing tasks before backpressure
 indexer.queue-capacity=100
 
+# Document types to exclude from search results
+indexer.excluded-document-types=type:collection type:compound type:array type:file
+
 # EFO indexing configuration
 efo.stopwords=a,able,about,across,after,all,almost,also,am,among,an,and,any,are,as,at,be,because,been,but,by,can,cannot,could,dear,did,do,does,either,else,ever,every,for,from,get,got,had,has,have,he,her,hers,him,his,how,however,i,if,in,into,is,it,its,just,least,let,like,likely,may,me,might,most,must,my,neither,no,nor,not,of,off,often,on,only,or,other,our,own,rather,said,say,says,she,should,since,so,some,than,that,the,their,them,then,there,these,they,this,tis,to,too,twas,us,wants,was,we,were,what,when,where,which,while,who,whom,why,will,with,would,yet,you,your
 efo.ignore-list=efo-ignore.txt
 efo.owl-filename=temp/efo.owl
 efo.update-url=https://www.ebi.ac.uk/efo/efo.owl
+
+# Import subcollection hierarchy configuration
+spring.config.import=classpath:subcollections.yml
 
