--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,15 @@ indexer.queue-capacity=100
 # Document types to exclude from search results
 indexer.excluded-document-types=type:collection type:compound type:array type:file
 
+# Fields that are indexed for full-text search
+indexer.fields=accession,authors,content,title,abstract
+
+# Default field to use for full-text search
+indexer.default-field=content
+
+# Size of fragments returned by Lucene's highlighting API for snippet extraction
+indexer.search-snippet-fragment-size=300
+
 # EFO indexing configuration
 efo.stopwords=a,able,about,across,after,all,almost,also,am,among,an,and,any,are,as,at,be,because,been,but,by,can,cannot,could,dear,did,do,does,either,else,ever,every,for,from,get,got,had,has,have,he,her,hers,him,his,how,however,i,if,in,into,is,it,its,just,least,let,like,likely,may,me,might,most,must,my,neither,no,nor,not,of,off,often,on,only,or,other,our,own,rather,said,say,says,she,should,since,so,some,than,that,the,their,them,then,there,these,they,this,tis,to,too,twas,us,wants,was,we,were,what,when,where,which,while,who,whom,why,will,with,would,yet,you,your
 efo.ignore-list=efo-ignore.txt
