--- a/pom.xml
+++ b/pom.xml
@@ -14,37 +14,28 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>biostudies-index-service</name>
   <description>Service for indexing and serving BioStudies search indices using Lucene</description>
-  <url/>
-  <licenses>
-    <license/>
-  </licenses>
-  <developers>
-    <developer/>
-  </developers>
-  <scm>
-    <connection/>
-    <developerConnection/>
-    <tag/>
-    <url/>
-  </scm>
+
   <properties>
     <java.version>21</java.version>
+    <lucene.version>10.3.0</lucene.version>
+    <owlapi.version>3.5.1</owlapi.version>
+    <hermit.version>1.3.8.4</hermit.version>
+    <guava.version>33.5.0-jre</guava.version>
+    <commons-lang3.version>3.20.0</commons-lang3.version>
+    <httpclient.version>4.5.14</httpclient.version>
+    <aws-java-sdk.version>1.12.780</aws-java-sdk.version>
+    <testcontainers.version>1.21.4</testcontainers.version>
+    <mockserver-client.version>5.15.0</mockserver-client.version>
+    <rest-assured.version>6.0.0</rest-assured.version>
+    <hamcrest.version>2.2</hamcrest.version>
+    <springdoc.version>2.8.0</springdoc.version>
   </properties>
+
   <dependencies>
     <!-- Spring Boot Web -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-web</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.data</groupId>
-      <artifactId>spring-data-commons</artifactId>
     </dependency>
 
     <!-- Spring Boot WebSocket (includes spring-messaging and spring-websocket) -->
@@ -53,24 +44,21 @@
       <artifactId>spring-boot-starter-websocket</artifactId>
     </dependency>
 
-    <!-- Add this explicitly if needed -->
+    <!-- Spring Boot Security -->
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-messaging</artifactId>
-      <!-- NO version specified - Spring Boot manages it -->
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+
+    <!-- Spring Boot Jackson -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jackson</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-websocket</artifactId>
-      <!-- NO version specified - Spring Boot manages it -->
-    </dependency>
-
-    <!-- RabbitMQ Java Client for test setup -->
-    <dependency>
-      <groupId>com.rabbitmq</groupId>
-      <artifactId>amqp-client</artifactId>
-      <scope>test</scope>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
     </dependency>
 
     <!-- Lombok -->
@@ -80,64 +68,41 @@
       <optional>true</optional>
     </dependency>
 
-    <!-- Spring Boot Test -->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-security-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- Lucene Core -->
+    <!-- Lucene Dependencies -->
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-core</artifactId>
-      <version>10.3.0</version>
+      <version>${lucene.version}</version>
     </dependency>
 
-    <!-- Lucene Analysis Common -->
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-analysis-common</artifactId>
-      <version>10.3.0</version>
+      <version>${lucene.version}</version>
     </dependency>
 
-    <!-- Lucene Query Parser -->
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-queryparser</artifactId>
-      <version>10.3.0</version>
+      <version>${lucene.version}</version>
     </dependency>
 
-    <!-- Lucene Highlighter -->
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-highlighter</artifactId>
-      <version>10.3.0</version>
+      <version>${lucene.version}</version>
     </dependency>
 
-    <!-- Lucene Facets -->
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-facet</artifactId>
-      <version>10.3.0</version>
+      <version>${lucene.version}</version>
     </dependency>
 
-    <!-- Lucene Suggest (includes SpellChecker) -->
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-suggest</artifactId>
-      <version>10.3.0</version>
+      <version>${lucene.version}</version>
     </dependency>
 
     <!-- JSON Path -->
@@ -146,39 +111,79 @@
       <artifactId>json-path</artifactId>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-aws-context -->
+    <!-- Apache HttpClient - Required for HTTP operations -->
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-aws-context</artifactId>
-      <version>2.2.6.RELEASE</version>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>${httpclient.version}</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <!-- AWS SDK for S3 - Using AWS SDK v1 for compatibility -->
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-s3</artifactId>
+      <version>${aws-java-sdk.version}</version>
+    </dependency>
+
+    <!-- Apache Commons Lang3 -->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.20.0</version>
+      <version>${commons-lang3.version}</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+    <!-- Google Guava -->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>33.5.0-jre</version>
+      <version>${guava.version}</version>
     </dependency>
 
-    <!-- Source: https://mvnrepository.com/artifact/net.sourceforge.owlapi/owlapi-api -->
+    <!-- OWLAPI - Keeping version 3.5.1 for EFO compatibility
+         WARNING: OWLAPI 3.x is old but HermiT reasoner requires it
+         Upgrading to OWLAPI 4.x+ requires major code changes and HermiT migration -->
     <dependency>
       <groupId>net.sourceforge.owlapi</groupId>
       <artifactId>owlapi-api</artifactId>
-      <version>3.5.1</version>
+      <version>${owlapi.version}</version>
       <scope>compile</scope>
     </dependency>
 
+    <!-- HermiT Reasoner - Compatible with OWLAPI 3.x only -->
     <dependency>
       <groupId>com.hermit-reasoner</groupId>
       <artifactId>org.semanticweb.hermit</artifactId>
-      <version>1.3.8.4</version>
+      <version>${hermit.version}</version>
+    </dependency>
+
+    <!-- OpenAPI/Swagger Documentation -->
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>${springdoc.version}</version>
+    </dependency>
+
+    <!-- TEST DEPENDENCIES -->
+
+    <!-- Spring Boot Test -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Spring Security Test -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- RabbitMQ Java Client for test setup -->
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <!-- Awaitility for async testing -->
@@ -197,31 +202,32 @@
 
     <dependency>
       <groupId>org.testcontainers</groupId>
-      <artifactId>testcontainers-junit-jupiter</artifactId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${testcontainers.version}</version>
       <scope>test</scope>
     </dependency>
 
-    <!-- Source: https://mvnrepository.com/artifact/org.testcontainers/mockserver -->
+    <!-- MockServer Testcontainers Module -->
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>mockserver</artifactId>
-      <version>1.21.4</version>
-      <scope>compile</scope>
+      <version>${testcontainers.version}</version>
+      <scope>test</scope>
     </dependency>
 
-    <!-- Source: https://mvnrepository.com/artifact/org.mock-server/mockserver-client-java-no-dependencies -->
+    <!-- MockServer Client -->
     <dependency>
       <groupId>org.mock-server</groupId>
       <artifactId>mockserver-client-java-no-dependencies</artifactId>
-      <version>5.15.0</version>
-      <scope>compile</scope>
+      <version>${mockserver-client.version}</version>
+      <scope>test</scope>
     </dependency>
 
-    <!-- Source: https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+    <!-- REST Assured for API testing -->
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
-      <version>6.0.0</version>
+      <version>${rest-assured.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -229,25 +235,8 @@
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest</artifactId>
-      <version>2.2</version>
+      <version>${hamcrest.version}</version>
       <scope>test</scope>
-    </dependency>
-
-
-    <dependency>
-      <groupId>com.fasterxml.jackson.datatype</groupId>
-      <artifactId>jackson-datatype-jsr310</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-jackson</artifactId>
-    </dependency>
-
-    <!-- Source: https://mvnrepository.com/artifact/com.spring4all/spring-boot-starter-swagger -->
-    <dependency>
-      <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-      <version>2.8.0</version>
     </dependency>
 
   </dependencies>
