--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,6 +49,11 @@ efo.ignore-list=efo-ignore.txt
 efo.owl-filename=temp/efo.owl
 efo.update-url=https://www.ebi.ac.uk/efo/efo.owl
 
+# Autocomplete configuration
+
+# Only show efo terms and synonyms that exist in the submission index
+autocomplete.filter-by-index=true
+
 # Import subcollection hierarchy configuration
 spring.config.import=classpath:subcollections.yml
 
